# NovaCrypt

./: CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
src/: AIEngine.cpp  AIEngine.h  MarketData.cpp  MarketData.h  NovaCryptBot.cpp  NovaCryptBot.h  RiskManager.cpp  RiskManager.h  Strategy.cpp  Strategy.h  TradeExecutor.cpp  TradeExecutor.h
src/ai/: EnsembleModel.cpp  EnsembleModel.h
src/backtesting/: Backtester.cpp  Backtester.h
src/data/: DataQualityMetrics.cpp  DataQualityMetrics.h  MarketDataPipeline.cpp  MarketDataPipeline.h
src/indicators/: IndicatorManager.cpp  IndicatorManager.h  MarketData.cpp  MarketData.h
src/sentiment/: SentimentAnalyzer.cpp  SentimentAnalyzer.h
src/tests/: DataQualityTest.cpp
src/ui/: Dashboard.cpp
